# rtsp-to-webrtc-client

./: .coveragerc  .cruft.json  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  README.md  pyproject.toml  renovate.json5  requirements.txt  requirements_dev.txt  requirements_dev.txt.rej  setup.cfg
.github/workflows/: cruft.yaml  lint.yaml  pages.yaml  publish.yaml  python-package.yaml  python-package.yml  test.yaml
rtsp-to-webrtc-client/: __init__.py
rtsp_to_webrtc/: __init__.py  client.py  diagnostics.py  exceptions.py  interface.py  web_client.py  webrtc_client.py
tests/: client_test.py  conftest.py  test_client.py  test_web_client.py  test_webrtc_client.py  x.py
