[metadata]
name = rtsp-to-webrtc
version = 0.2.4
license = Apache 2.0
description = Python client library for RTSPtoWebRTC
long_description = file: README.md
long_description_content_type = text/markdown
author = Allen Porter
author_email = allen@thebends.org

[options]
packages = find:
package_dir =
    = .
include_package_data = True
install_requires =
    aiohttp>=3.7.3

[options.packages.find]
where = .

[flake8]
max-line-length=88
