[metadata]
name = rtsp-to-webrtc
version = 0.2.7
license = Apache 2.0
description = Python client library for RTSPtoWebRTC
long_description = file: README.md
long_description_content_type = text/markdown
author = Allen Porter
author_email = allen@thebends.org

[options]
packages = find:
package_dir =
    = .
include_package_data = True
install_requires =
    aiohttp>=3.7.3

[options.package_data]
rtsp-to-webrtc = py.typed

[options.packages.find]
where = .

[flake8]
max-line-length=88
