[metadata]
name = rtsp_to_webrtc
version = 0.5.1
description = Python client library for RTSPtoWeb and RTSPtoWebRTC
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/allenporter/rtsp-to-webrtc-client
author = Allen Porter
author_email = allen@thebends.org
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    aiohttp>=3.7.3
python_requires = >=3.10
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude =
    tests
    tests.*

[options.package_data]
rtsp_to_webrtc = py.typed
